@@ -45,5 +45,6 @@ EXPORTS
     
     WgxCreateProcess
     WgxCreateThread
+    WgxCheckAdminRights
     
     WgxPrintUnicodeString
